chore: Boilerplate the food/config handlers
