# internal/server/food_logs.go
@@ -1,0 +1,41 @@
+package server
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/openhealthsuite/diary/internal/server/generated"
+)
+
+// CreateFoodLog implements generated.ServerInterface.
+func (g *ServerState) CreateFoodLog(c *gin.Context) {
+	panic("unimplemented")
+}
+
+// DeleteFoodLog implements generated.ServerInterface.
+func (g *ServerState) DeleteFoodLog(c *gin.Context, itemId string) {
+	panic("unimplemented")
+}
+
+// ExportFoodLogs implements generated.ServerInterface.
+func (g *ServerState) ExportFoodLogs(c *gin.Context) {
+	panic("unimplemented")
+}
+
+// GetFoodLog implements generated.ServerInterface.
+func (g *ServerState) GetFoodLog(c *gin.Context, itemId string) {
+	panic("unimplemented")
+}
+
+// PurgeFoodLogs implements generated.ServerInterface.
+func (g *ServerState) PurgeFoodLogs(c *gin.Context) {
+	panic("unimplemented")
+}
+
+// QueryFoodLogs implements generated.ServerInterface.
+func (g *ServerState) QueryFoodLogs(c *gin.Context, params generated.QueryFoodLogsParams) {
+	panic("unimplemented")
+}
+
+// UpdateFoodLog implements generated.ServerInterface.
+func (g *ServerState) UpdateFoodLog(c *gin.Context, itemId string) {
+	panic("unimplemented")
+}
