# internal/server/generated/api-types.gen.go
@@ -2,3 +2,182 @@
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package generated
+
+import (
+	"encoding/json"
+	"time"
+
+	"github.com/oapi-codegen/runtime"
+)
+
+// Configuration defines model for Configuration.
+type Configuration struct {
+	Id    string             `json:"id"`
+	Value ConfigurationValue `json:"value"`
+}
+
+// ConfigurationValue defines model for ConfigurationValue.
+type ConfigurationValue struct {
+	union json.RawMessage
+}
+
+// ConfigurationValue2 defines model for .
+type ConfigurationValue2 = map[string]interface{}
+
+// CreateFoodLogEntry defines model for CreateFoodLogEntry.
+type CreateFoodLogEntry struct {
+	Labels  []string           `json:"labels"`
+	Metrics map[string]float32 `json:"metrics"`
+	Name    string             `json:"name"`
+	Time    TimeRange          `json:"time"`
+}
+
+// EditFoodLogEntry defines model for EditFoodLogEntry.
+type EditFoodLogEntry struct {
+	Id      string              `json:"id"`
+	Labels  *[]string           `json:"labels,omitempty"`
+	Metrics *map[string]float32 `json:"metrics,omitempty"`
+	Name    *string             `json:"name,omitempty"`
+	Time    *TimeRange          `json:"time,omitempty"`
+}
+
+// Error defines model for Error.
+type Error struct {
+	Code    int32  `json:"code"`
+	Message string `json:"message"`
+}
+
+// FoodLogEntry defines model for FoodLogEntry.
+type FoodLogEntry struct {
+	Id      string             `json:"id"`
+	Labels  []string           `json:"labels"`
+	Metrics map[string]float32 `json:"metrics"`
+	Name    string             `json:"name"`
+	Time    TimeRange          `json:"time"`
+}
+
+// MetricConfigItem defines model for MetricConfigItem.
+type MetricConfigItem struct {
+	Label    string `json:"label"`
+	Priority int    `json:"priority"`
+}
+
+// MetricsConfiguration Mapping of metric keys to metric configuration
+type MetricsConfiguration map[string]MetricConfigItem
+
+// SummaryConfiguration defines model for SummaryConfiguration.
+type SummaryConfiguration struct {
+	ShowMetricSummary []string `json:"showMetricSummary"`
+}
+
+// TimeRange defines model for TimeRange.
+type TimeRange struct {
+	End   time.Time `json:"end"`
+	Start time.Time `json:"start"`
+}
+
+// UnexpectedError defines model for UnexpectedError.
+type UnexpectedError = Error
+
+// QueryFoodLogsParams defines parameters for QueryFoodLogs.
+type QueryFoodLogsParams struct {
+	StartDate time.Time `form:"startDate" json:"startDate"`
+	EndDate   time.Time `form:"endDate" json:"endDate"`
+}
+
+// StoreUserConfigJSONRequestBody defines body for StoreUserConfig for application/json ContentType.
+type StoreUserConfigJSONRequestBody = ConfigurationValue
+
+// CreateFoodLogJSONRequestBody defines body for CreateFoodLog for application/json ContentType.
+type CreateFoodLogJSONRequestBody = CreateFoodLogEntry
+
+// UpdateFoodLogJSONRequestBody defines body for UpdateFoodLog for application/json ContentType.
+type UpdateFoodLogJSONRequestBody = EditFoodLogEntry
+
+// AsMetricsConfiguration returns the union data inside the ConfigurationValue as a MetricsConfiguration
+func (t ConfigurationValue) AsMetricsConfiguration() (MetricsConfiguration, error) {
+	var body MetricsConfiguration
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromMetricsConfiguration overwrites any union data inside the ConfigurationValue as the provided MetricsConfiguration
+func (t *ConfigurationValue) FromMetricsConfiguration(v MetricsConfiguration) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergeMetricsConfiguration performs a merge with any union data inside the ConfigurationValue, using the provided MetricsConfiguration
+func (t *ConfigurationValue) MergeMetricsConfiguration(v MetricsConfiguration) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+// AsSummaryConfiguration returns the union data inside the ConfigurationValue as a SummaryConfiguration
+func (t ConfigurationValue) AsSummaryConfiguration() (SummaryConfiguration, error) {
+	var body SummaryConfiguration
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromSummaryConfiguration overwrites any union data inside the ConfigurationValue as the provided SummaryConfiguration
+func (t *ConfigurationValue) FromSummaryConfiguration(v SummaryConfiguration) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergeSummaryConfiguration performs a merge with any union data inside the ConfigurationValue, using the provided SummaryConfiguration
+func (t *ConfigurationValue) MergeSummaryConfiguration(v SummaryConfiguration) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+// AsConfigurationValue2 returns the union data inside the ConfigurationValue as a ConfigurationValue2
+func (t ConfigurationValue) AsConfigurationValue2() (ConfigurationValue2, error) {
+	var body ConfigurationValue2
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromConfigurationValue2 overwrites any union data inside the ConfigurationValue as the provided ConfigurationValue2
+func (t *ConfigurationValue) FromConfigurationValue2(v ConfigurationValue2) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergeConfigurationValue2 performs a merge with any union data inside the ConfigurationValue, using the provided ConfigurationValue2
+func (t *ConfigurationValue) MergeConfigurationValue2(v ConfigurationValue2) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+func (t ConfigurationValue) MarshalJSON() ([]byte, error) {
+	b, err := t.union.MarshalJSON()
+	return b, err
+}
+
+func (t *ConfigurationValue) UnmarshalJSON(b []byte) error {
+	err := t.union.UnmarshalJSON(b)
+	return err
+}
