# internal/server/user_config.go
@@ -1,0 +1,13 @@
+package server
+
+import "github.com/gin-gonic/gin"
+
+// GetUserConfig implements generated.ServerInterface.
+func (g *ServerState) GetUserConfig(c *gin.Context, configId string) {
+	panic("unimplemented")
+}
+
+// StoreUserConfig implements generated.ServerInterface.
+func (g *ServerState) StoreUserConfig(c *gin.Context, configId string) {
+	panic("unimplemented")
+}
